--- a/public/views/game2.html
+++ b/public/views/game2.html
@@ -32,39 +32,7 @@
           </div>
       </header>
 
-      <main class="container" id="ScreenCreation"  style="display: none;">
-        <div class="row">
-          <div class="col-12 col-md-4 d-flex justify-content-center text-center">
-            <nav class="nav nav-game mb-3 d-flex flex-nowrap flex-md-column justify-content-center overflow-auto">
-              <a class="nav-link" href="/home">Home</a>
-              <a class="nav-link active" href="#">Desafio</a>
-            </nav>
-          </div>
-          <div class="col-12 col-md-8">
-            <div class="">
-              <img src="/assets/img/game.gif" class="card-img" alt="...">
-            </div>
-            <div class="">
-              <div class="card-body pt-0">
-                <div class="alert alert-danger mb-1 py-1 px-1 text-center" id="messageBoxCreate" style="display: none;"></div>
-                <h5 class="card-title text-center" id="messageTitleCreate">Disciplina</h5>
-                <form name="formLogin" autocomplete="off">
-                  <!-- Usuario -->
-                  <div class="col-auto my-1">
-                    <select class="custom-select mr-sm-2" id="MultiplayerSubject"></select>
-                  </div>
-                  <!-- Iniciar sessão -->
-                  <div class="form-group btn-container mb-2">
-                    <button class="btn login_cover btn-block" id="BtnPlayerOneStart"><i class="fa fa-sign-in fa-lg fa-fw"></i>Iniciar Jogo</button>
-                  </div>
-                </form>
-              </div>
-            </div>            
-          </div>
-        </div>
-      </main>
-
-      <main class="container" id="ScreenWaiting"  style="display: none;">
+      <main class="container" id="pageCreateRoom"  style="display: none;">
         <div class="row">
           <div class="col-12 col-md-4 d-flex justify-content-center text-center">
             <nav class="nav nav-game mt-2 d-flex flex-nowrap flex-md-column justify-content-center overflow-auto">
@@ -90,7 +58,7 @@
                     </div>
                     <!-- Aceitar desafio -->
                     <div class="form-group btn-container">
-                      <a href="" data-action="share/whatsapp/share" target="_blank" class="btn login_cover btn-block" id="btnSendInvite">Partilhar no WhatsApp <i class="fa fa-whatsapp"></i></a>
+                      <a href="" data-action="share/whatsapp/share" target="_blank" class="btn login_cover btn-block" id="btnSendInvite">Partilhar via WhatsApp <i class="fa fa-whatsapp"></i></a>
                     </div>
                   </div>
                 </div>
@@ -100,7 +68,7 @@
         </div>
       </main>
 
-      <main class="container" id="ScreenJoin"  style="display: none;">
+      <main class="container" id="pageJoinRoom"  style="display: none;">
         <div class="row">
           <div class="col-12 col-md-4 d-flex justify-content-center text-center">
             <nav class="nav nav-game mb-3 d-flex flex-nowrap flex-md-column justify-content-center overflow-auto">
@@ -140,11 +108,75 @@
         </div>
       </main>
 
-      <main class="container" id="ScreenPlay"  style="display: none;">
+      <main class="container" id="pageRoom"  style="display: none;">
+			  <div class="row">
+          <div class="col-12 col-md-4 d-flex justify-content-center text-center">
+            <nav class="nav nav-game mt-2 d-flex flex-nowrap flex-md-column justify-content-center overflow-auto">
+              <!--p class="mb-0">Master : <span id="masterName" class="gameMaster"></span></p>
+              <input type="hidden" id="masterId"-->
+              <p class="mb-0">Adversário <span id="NameOtherPlayer" class="gameMaster"></span>
+                <input type="hidden" id="idOtherPlayer">
+              </p>
+            </nav>
+          </div>
+          <div class="col-12 col-md-8">
+            <div class="">
+              <img src="/assets/img/game.gif" class="card-img" alt="...">
+            </div> 
+            <div class="">
+              <div class="card-body py-0">
+                <h5 class="card-title text-center">Opções</h5>
+              </div>
+              <!-- Criar Jogo -->
+              <div class="form-group btn-container mb-2">
+                <button class="btn login_cover btn-block" id="btnNewGame">Novo Jogo <i class="fa fa-plus fa-lg fa-fw"></i></button>
+              </div>
+              <!-- Aceitar convite -->
+              <div class="form-group btn-container mb-2">
+                <a href="/home"  class="btn btn-danger btn-block" id="btnLeaveRoom">Sair da sala <i class="fa fa-home fa-lg fa-fw"></i></a>
+              </div>
+            </div>
+					</div>
+				</div>
+			</main>
+
+      <main class="container" id="pageNewGame"  style="display: none;">
         <div class="row">
           <div class="col-12 col-md-4 d-flex justify-content-center text-center">
             <nav class="nav nav-game mb-3 d-flex flex-nowrap flex-md-column justify-content-center overflow-auto">
-              <strong class="nav-link" id="namePlayerNow"></strong><input type="hidden" id="idPlayerNow">
+              <a class="nav-link" href="/home">Home</a>
+              <a class="nav-link active" href="#">Desafio</a>
+            </nav>
+          </div>
+          <div class="col-12 col-md-8">
+            <div class="">
+              <img src="/assets/img/game.gif" class="card-img" alt="...">
+            </div>
+            <div class="">
+              <div class="card-body pt-0">
+                <div class="alert alert-danger mb-1 py-1 px-1 text-center" id="messageBoxCreate" style="display: none;"></div>
+                <h5 class="card-title text-center" id="messageTitleCreate">Disciplina</h5>
+                <form name="formLogin" autocomplete="off">
+                  <!-- Usuario -->
+                  <div class="col-auto my-1">
+                    <select class="custom-select mr-sm-2" id="MultiplayerSubject"></select>
+                  </div>
+                  <!-- Iniciar sessão -->
+                  <div class="form-group btn-container mb-2">
+                    <button class="btn login_cover btn-block" id="BtnStart"><i class="fa fa-sign-in fa-lg fa-fw"></i>Iniciar Jogo</button>
+                  </div>
+                </form>
+              </div>
+            </div>            
+          </div>
+        </div>
+      </main>
+
+      <main class="container" id="pageGame"  style="display: none;">
+        <div class="row">
+          <div class="col-12 col-md-4 d-flex justify-content-center text-center">
+            <nav class="nav nav-game mb-3 d-flex flex-column flex-nowrap flex-md-column justify-content-center overflow-auto">
+              <strong class="nav-link" id="namePlayerNow">Hiracema Síntya</strong><input type="hidden" id="idPlayerNow">
             </nav>
           </div>
           <div class="col-12 col-md-8 px-2 pt-md-5">
@@ -184,39 +216,67 @@
               </div>
 
               <div class="playing" id="playing">
-                <div class="alert alert-primary p-2 boxGame" id="perguntas"></div>
+                <div class="alert alert-primary p-2 boxGame" id="question"></div>
                 <label class="option boxGame" id="1"></label>
                 <label class="option boxGame" id="2"></label>
                 <label class="option boxGame" id="3"></label>
                 <label class="option boxGame" id="4"></label>
               </div>
 
-              <div class="endGame boxGame" id="endGame" style="display: none;">
-                <div class="p-2 text-center">              
-                  <div class="row">
-                    <div class="col-3 d-flex justify-content-center text-center text-dark">
-                      <div class="d-flex flex-nowrap flex-column justify-content-center ">
-                        <img src="" alt="Parabéns" width="200%" id="image">
-                      </div>
-                    </div>
-                  </div>
-                  <hr class="hrTable my-1">
-                  <div class="row">
-                    <div class="col-12">
-                      Disciplina : <span id="disciplina"></span>
-                    </div>
-                  </div>
-                  <hr class="hrTable my-1">
-                  <div class="row" id="btnBox"></div>
-                </div>
-              </div>
-
             </div>
           </div>
         </div>
       </main>
-    </div>
+      
+      <main class="container" id="pageEndGame"  style="display: none;">
+        <div class="row">
+          <div class="col-12 col-md-4 d-flex justify-content-center text-center">
+            <nav class="nav nav-game mb-3 d-flex flex-nowrap flex-md-column justify-content-center overflow-auto">
+              <strong class="nav-link" id="namePlayerWin"></strong><input type="hidden" id="idPlayerWin">
+            </nav>
+          </div>
+          <div class="col-12 col-md-8 px-2 pt-md-5">
+            <div class="endGame boxGame">
+              <div class="p-2 text-center">              
+                <div class="row">
+                  <div class="col-5 d-flex justify-content-center text-center text-dark">
+                    <div class="d-flex flex-nowrap flex-column justify-content-center ">
+                      <b><p class="mb-0 gameMaster" id="Player1Name"></p></b>
+                      <p class="mb-0"><span id="Player1CurrentScore"></span> Pontos</p>
+                      <p class="mb-0">Acertou - <span id="Player1CountCorrect"></span></p>
+                      <p class="mb-0">Errou - <span id="Player1CountIncorrect"></span></p>
+                      <p class="mb-0">Total - <span id="Player1CountTotal"></span></p>
+                    </div>
+                  </div>
+                  <div class="col-2 d-flex justify-content-center align-items-center text-center text-verde">
+                    <b>Vs</b>
+                  </div>
+                  <div class="col-5 d-flex justify-content-center text-center text-dark">
+                    <div class="d-flex flex-nowrap flex-column justify-content-center ">
+                      <b><p class="mb-0 gameMaster" id="Player2Name"></p></b>
+                      <p class="mb-0"><span id="Player2CurrentScore"></span> Pontos</p>
+                      <p class="mb-0">Acertou - <span id="Player2CountCorrect"></span></p>
+                      <p class="mb-0">Errou - <span id="Player2CountIncorrect"></span></p>
+                      <p class="mb-0">Total - <span id="Player2CountTotal"></span></p>
+                    </div>
+                  </div>
+                </div>
+                <hr class="hrTable my-1">
+                <div class="row">
+                  <div class="col-12">
+                    Disciplina : <span id="disciplina"></span>
+                  </div>
+                </div>
+                <hr class="hrTable my-1">
+                <div class="row" id="btnBox"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
 
+    </div>
+    <script>document.getElementById('username').innerText = localStorage.getItem('username');</script>
     <!-- Essential javascripts for application to work-->
     <script src="/assets/js/jquery-3.5.1.min.js"></script>
     <script src="/assets/js/popper.min.js"></script>
