--- a/public/views/home.html
+++ b/public/views/home.html
@@ -52,11 +52,11 @@
 					  <form name="formLogin" autocomplete="off">
 						<!-- um jogador -->
 						<div class="form-group btn-container mb-2">
-							<a href="/home/menu" class="btn login_cover btn-block">Um Jogador : <i class="fa fa-user-secret fa-lg fa-fw"></i>Vs <i class="fa fa-desktop fa-lg fa-fw"></i></a>
+							<a href="/home/menu" class="btn login_cover btn-block">Novo Jogo</a>
 						  </div>
 						<!-- dois jogadores -->
 						<div class="form-group btn-container mb-2">
-						  <a href="/home/multiplayer" class="btn login_cover btn-block">Dois Jogadores : <i class="fa fa-user-secret fa-lg fa-fw"></i>Vs <i class="fa fa-user-secret fa-lg fa-fw"></i></a>
+						  <a href="/home/multiplayer" class="btn login_cover btn-block">1 Vs 1</a>
 						</div>
 					  </form>
 					</div>
