--- a/public/views/menu.html
+++ b/public/views/menu.html
@@ -70,7 +70,7 @@
     <script src="/assets/js/jquery-3.5.1.min.js"></script>
     <script src="/assets/js/popper.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/plugins/menu.js"></script>
+    <script type="module" src="/assets/js/plugins/menu.js"></script>
       
     <!--script async src="https://www.googletagmanager.com/gtag/js?id=G-QCJW424HJY"></script>
     <script>
