--- a/public/views/multiplayer.html
+++ b/public/views/multiplayer.html
@@ -34,36 +34,36 @@
 			</header>
 			
 			<main class="container">
-			  <div class="row">
-				<div class="col-12 col-md-4 d-flex justify-content-center text-center">
-				  <nav class="nav nav-game mb-3 d-flex flex-nowrap flex-md-column justify-content-center overflow-auto">
-					<a class="nav-link" href="/home">Home</a>
-					<a class="nav-link active" href="#">Multiplayer</a>
-				  </nav>
-				</div>
-				<div class="col-12 col-md-8">
-				  <div class="">
-					<img src="../assets/img/game.gif" class="card-img" alt="...">
-				  </div> 
-				  <div class="">
-					<div class="card-body pt-0">
-					  <h5 class="card-title text-center">Opções de Jogo</h5>
-					  <div>
-						<!-- Criar Jogo -->
-						<div class="form-group btn-container mb-2">
-							<button class="btn login_cover btn-block" id="playerOneCreate">Novo Jogo <i class="fa fa-plus fa-lg fa-fw"></i></button>
-						  </div>
-						<!-- Aceitar convite -->
-						<div class="form-group btn-container mb-2">
-						  <button  class="btn login_cover btn-block" id="playerTwoJoin">Entrar num Jogo <i class="fa fa-home fa-lg fa-fw"></i></button>
-						</div>
+				<div class="row">
+					<div class="col-12 col-md-4 d-flex justify-content-center text-center">
+						<nav class="nav nav-game mb-3 d-flex flex-nowrap flex-md-column justify-content-center overflow-auto">
+							<a class="nav-link" href="/home">Home</a>
+							<a class="nav-link active" href="#">Multiplayer</a>
+						</nav>
 					</div>
+					<div class="col-12 col-md-8">
+						<div class="">
+							<img src="../assets/img/game.gif" class="card-img" alt="...">
+						</div> 
+						<div class="">
+							<div class="card-body pt-0">
+								<h5 class="card-title text-center">Salas de Jogos</h5>
+							</div>
+							<!-- Criar Jogo -->
+							<div class="form-group btn-container mb-2">
+								<button class="btn login_cover btn-block" id="playerOneCreateRoom">Novo sala <i class="fa fa-plus fa-lg fa-fw"></i></button>
+							</div>
+							<!-- Aceitar convite -->
+							<div class="form-group btn-container mb-2">
+								<button  class="btn login_cover btn-block" id="playerTwoJoinRoom">Entrar numa sala <i class="fa fa-home fa-lg fa-fw"></i></button>
+							</div>
+						</div>    
 					</div>
-				  </div>    
 				</div>
-			  </div>
 			</main>
+
 		</div>
+		<script>document.getElementById('username').innerText = localStorage.getItem('username');</script>
 		<script src="/assets/js/jquery-3.5.1.min.js"></script>
 		<script src="/assets/js/plugins/home.js"></script>
 	</body>
