--- a/public/views/game2.html
+++ b/public/views/game2.html
@@ -159,7 +159,7 @@
                 <form name="formLogin" autocomplete="off">
                   <!-- Usuario -->
                   <div class="col-auto my-1">
-                    <select class="custom-select mr-sm-2" id="MultiplayerSubject"></select>
+                    <select class="custom-select mr-sm-2" id="MultiplayerSubject" disabled></select>
                   </div>
                   <!-- Iniciar sessão -->
                   <div class="form-group btn-container mb-2">
