--- a/public/views/game2.html
+++ b/public/views/game2.html
@@ -144,8 +144,9 @@
         <div class="row">
           <div class="col-12 col-md-4 d-flex justify-content-center text-center">
             <nav class="nav nav-game mb-3 d-flex flex-nowrap flex-md-column justify-content-center overflow-auto">
-              <a class="nav-link" href="/home">Home</a>
-              <a class="nav-link active" href="#">Desafio</a>
+              <p class="mb-0">Adversário <span id="NameOtherPlayer" class="gameMaster"></span>
+                <input type="hidden" id="idOtherPlayer">
+              </p>
             </nav>
           </div>
           <div class="col-12 col-md-8">
