--- a/public/views/game2.html
+++ b/public/views/game2.html
@@ -144,8 +144,8 @@
         <div class="row">
           <div class="col-12 col-md-4 d-flex justify-content-center text-center">
             <nav class="nav nav-game mb-3 d-flex flex-nowrap flex-md-column justify-content-center overflow-auto">
-              <p class="mb-0">Adversário <span id="NameOtherPlayer" class="gameMaster"></span>
-                <input type="hidden" id="idOtherPlayer">
+              <p class="mb-0">Adversário <span id="NameOtherPlayer2" class="gameMaster"></span>
+                <input type="hidden" id="idOtherPlayer2">
               </p>
             </nav>
           </div>
@@ -177,7 +177,7 @@
         <div class="row">
           <div class="col-12 col-md-4 d-flex justify-content-center text-center">
             <nav class="nav nav-game mb-3 d-flex flex-column flex-nowrap flex-md-column justify-content-center overflow-auto">
-              <strong class="nav-link" id="namePlayerNow">Hiracema Síntya</strong><input type="hidden" id="idPlayerNow">
+              <strong class="nav-link" id="namePlayerNow"></strong><input type="hidden" id="idPlayerNow">
             </nav>
           </div>
           <div class="col-12 col-md-8 px-2 pt-md-5">
