--- a/public/views/game2.html
+++ b/public/views/game2.html
@@ -129,7 +129,7 @@
               </div>
               <!-- Criar Jogo -->
               <div class="form-group btn-container mb-2">
-                <button class="btn login_cover btn-block" id="btnNewGame">Novo Jogo <i class="fa fa-plus fa-lg fa-fw"></i></button>
+                <button class="btn login_cover btn-block" id="btnNewGame" disabled>Novo Jogo <i class="fa fa-plus fa-lg fa-fw"></i></button>
               </div>
               <!-- Aceitar convite -->
               <div class="form-group btn-container mb-2">
