--- a/public/views/menu.html
+++ b/public/views/menu.html
@@ -72,14 +72,14 @@
     <script src="/assets/js/bootstrap.min.js"></script>
     <script type="module" src="/assets/js/plugins/menu.js"></script>
       
-    <!--script async src="https://www.googletagmanager.com/gtag/js?id=G-QCJW424HJY"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCJW424HJY"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-QCJW424HJY');
-    </script-->
+    </script>
       
 </body>  
 </html>
