--- a/public/views/ranking.html
+++ b/public/views/ranking.html
@@ -64,14 +64,14 @@
     <script src="../assets/js/bootstrap.min.js"></script>
     <script src="../assets/js/plugins/ranking.js"></script>
 
-    <!--script async src="https://www.googletagmanager.com/gtag/js?id=G-QCJW424HJY"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCJW424HJY"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-QCJW424HJY');
-    </script-->
+    </script>
 
 </body>  
 </html>
